# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-worker"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
futures-util = "0.3"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
hex.workspace = true
serde.workspace = true
sonic-rs.workspace = true
bincode.workspace = true
reqwest.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring"] }
base64.workspace = true
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek.workspace = true
edgerun-runtime = { path = "../../crates/edgerun-runtime" }
edgerun-crypto = { path = "../../crates/edgerun-crypto" }
edgerun-observability = { path = "../../crates/edgerun-observability" }
edgerun-types = { path = "../../crates/edgerun-types" }
edgerun-transport-core = { path = "../../crates/edgerun-transport-core" }
