# SPDX-License-Identifier: Apache-2.0
[package]
name = "edgerun-term-ui"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
dirs = "5.0"
log = "0.4"
pixels = "0.15"
term-core = { package = "edgerun-term-core", path = "../core", features = ["test-util"] }
winit = { version = "0.30", default-features = false, features = [
    "rwh_06",
    "x11",
] }

thiserror.workspace = true
tempfile = "3"

[dev-dependencies]
tempfile = "3"
